--- a/WebContent/css/ProductPage.css
+++ b/WebContent/css/ProductPage.css
@@ -1,5 +1,7 @@
 @charset "ISO-8859-1";
 
+
+
 .card{
     padding:30px;
 }
@@ -100,6 +102,103 @@ body {
 	font-size: 18px;
 	line-height: 1.9;
 }
+
+	
+
+/* Product Page title Heading */	
+
+
+	.ProductTitle h1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 400;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  margin-bottom:40px;
+}
+
+.ProductTitle h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+.ProductTitle h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+
+
+.ProductTitle h1 {
+  text-align: center;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+}
+..ProductTitle h1:before {
+  width: 28px;
+  height: 5px;
+  display: block;
+  content: "";
+  position: absolute;
+  bottom: 3px;
+  left: 50%;
+  margin-left: -14px;
+  background-color: #b80000;
+}
+.ProductTitle h1:after {
+  width: 100px;
+  height: 1px;
+  display: block;
+  content: "";
+  position: relative;
+  margin-top: 25px;
+  left: 50%;
+  margin-left: -50px;
+  background-color: #b80000;
+}
+	
+/* Product Page title Heading */	
+
+
+
+
+.dropdown-menu li {
+	position: relative;
+}
+
+.nav-item .submenu {
+	display: none;
+	position: absolute;
+	left: 100%;
+	top: -7px;
+}
+
+.nav-item .submenu-left {
+	right: 100%;
+	left: auto;
+}
+
+.dropdown-menu>li:hover {
+	background-color: #f1f1f1
+}
+
+.dropdown-menu>li:hover>.submenu {
+	display: block;
+}
+
+
+
+
+
+
+
+
+
+	
 
 /* Carousel-caption responsiveness */
 .carousel-inner::before {
