--- a/WebContent/css/ProductPage.css
+++ b/WebContent/css/ProductPage.css
@@ -57,6 +57,8 @@
 
 /* Navbar css */
 
+/* Navbar css */
+
 body {
 	bacground: f1fbff;
 }
@@ -85,7 +87,6 @@ body {
 	
 	color:black;
 }
-
 .carousel-caption h5 {
 	font-size: 45px;
 	line-height: 140px;
@@ -103,7 +104,57 @@ body {
 	line-height: 1.9;
 }
 
-	
+/* Carousel-caption responsiveness */
+.carousel-inner::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.7);
+	z-index: 1;
+}
+
+.navbar .nav-item .nav-link {
+	font-size: 21px;
+	font-weight: 500;
+	color: black;
+	display: inline;
+}
+
+.navbar-nav .nav-item {
+	color: white;
+}
+
+.navbar .nav-item .nav-link {
+	font-weight: bold;
+}
+
+.navbar .nav-item .nav-link:hover {
+	border-radius: 8px;
+	color: white;
+	background-color: powderblue;
+	color: black;
+}
+
+.navbar-light .navbar-brand {
+	color: #000;
+	font-size: 25px;
+	text-tranform: uppercase;
+	font-weight: 780;
+	letter-spacing: 2px;
+}
+
+.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
+	color: #000;
+	color: white;
+	text-shadow: 2px 2px 4px #000000;
+}
+
+.w-100 {
+	height: 100%;
+}
 
 /* Product Page title Heading */	
 
@@ -165,7 +216,7 @@ body {
 
 
 
-
+/* Product dropdown css*/
 .dropdown-menu li {
 	position: relative;
 }
@@ -191,63 +242,5 @@ body {
 }
 
 
+/* Product dropdown css*/
 
-
-
-
-
-
-
-	
-
-/* Carousel-caption responsiveness */
-.carousel-inner::before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.7);
-	z-index: 1;
-}
-
-.navbar .nav-item .nav-link {
-	font-size: 21px;
-	font-weight: 500;
-	color: black;
-	display: inline;
-}
-
-.navbar-nav .nav-item {
-	color: white;
-}
-
-.navbar .nav-item .nav-link {
-	font-weight: bold;
-}
-
-.navbar .nav-item .nav-link:hover {
-	border-radius: 8px;
-	color: white;
-	background-color: powderblue;
-	color: black;
-}
-
-.navbar-light .navbar-brand {
-	color: #000;
-	font-size: 25px;
-	text-tranform: uppercase;
-	font-weight: 780;
-	letter-spacing: 2px;
-}
-
-.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
-	color: #000;
-	color: white;
-	text-shadow: 2px 2px 4px #000000;
-}
-
-.w-100 {
-	height: 100%;
-}
