--- a/WebContent/css/ProductPage.css
+++ b/WebContent/css/ProductPage.css
@@ -241,6 +241,68 @@ body {
 	display: block;
 }
 
-
 /* Product dropdown css*/
+
+
+
+/*Specific Product Page design
+ 	.container{
+    margin-top:100px;
+}
+.newarrival{
+    background:green;
+    width:50px;
+    color:white;
+    font-size:12px;
+    font-weight:bold;
+}
+.col-md-7{
+    color:#555;
+}
+.checked {
+  color: orange;
+  height:15px;
+
+}
+.price{
+    color:#FE980F;
+    font-size:26px;
+    font-weight:bold;
+    padding-top:20px;
+}
+input{
+    border:1px solid #ccc;
+    font-weight:bold;
+    height:33px;
+    text-align:center;
+    width:30px; 
+    
+}
+.btn-button1{
+    background:#FE980F;
+    color:#FFFFFF;
+    font-size:15px;
+    margin-left:20px;
+}
+h3{
+    font-family:sans-serif;
+    color:darkslategray;
+}
+.details-para{
+    font-size:25px;
+   
+}
+p{
+    font-size:20px;
+}
+
+Specific Product Page design*/
+
+
+
+
+
+
+
+
 
